@@ -1,3 +1,10 @@
+2003-09-02  Chris Garry  <cgarry@sweeneydesign.co.uk>
+
+    * tests/vnc-test.c:
+    * doc/vnc-server.html:
+    Modified for new BGR233 mode.
+
+
 2003-09-01  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/vnc-server.c: 
